[gd_scene load_steps=18 format=3 uid="uid://b63vh5hbbdhx7"]

[ext_resource type="Script" path="res://scenes/modules/module0/sprints/doi_mat_khau_nguoi_dung.gd" id="1_1itni"]
[ext_resource type="Texture2D" uid="uid://dgrhik6bqvhno" path="res://assets/sprites/ui/buttons/default_user.png" id="1_t6ki0"]
[ext_resource type="Theme" uid="uid://cvxiiwjwnm8g" path="res://assets/resources/themes/theme_field.tres" id="2_ed65r"]
[ext_resource type="Theme" uid="uid://cylkaowtg36ei" path="res://assets/resources/themes/theme_checkbutton.tres" id="3_y7q2q"]
[ext_resource type="Theme" uid="uid://brdiy7ttotod7" path="res://assets/resources/themes/theme_button.tres" id="5_bsw8f"]
[ext_resource type="Texture2D" uid="uid://dib2b4ivnvl4u" path="res://assets/sprites/ui/buttons/reload_white.png" id="6_yggqy"]
[ext_resource type="Texture2D" uid="uid://7njktnl60vll" path="res://assets/sprites/ui/buttons/save.png" id="7_nuy3c"]
[ext_resource type="Theme" uid="uid://dls2qucqgif8p" path="res://assets/resources/themes/theme_panel.tres" id="8_7uub3"]
[ext_resource type="Theme" uid="uid://cpltx4lyxm334" path="res://assets/resources/themes/theme_textinput.tres" id="9_c5r54"]
[ext_resource type="Texture2D" uid="uid://dtmtk1i8w3f1n" path="res://assets/sprites/ui/buttons/password.png" id="11_i26px"]
[ext_resource type="Theme" uid="uid://b0f85lxjcftcx" path="res://assets/resources/themes/theme_popup.tres" id="12_qkx2d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvb7b"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfkrt"]
bg_color = Color(0, 0.466667, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hq457"]
bg_color = Color(0, 0.380392, 0.611765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7jxa"]
bg_color = Color(0, 0.294118, 0.482353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugqaj"]
bg_color = Color(0, 0.304688, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_222ol"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="DoiMatKhauNguoiDung" type="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_1itni")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
texture = ExtResource("1_t6ki0")
expand_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.96

[node name="HoVaTen" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
theme_override_font_sizes/font_size = 24
disabled = true
text = "                         "
flat = true
alignment = 0

[node name="TenDangNhap" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
theme_override_font_sizes/font_size = 24
disabled = true
text = "                            "
flat = true
alignment = 0

[node name="BufferTop2" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SuaCheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_y7q2q")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
disabled = true
text = "Sửa thông tin người dùng        "
flat = true
expand_icon = true

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="LamMoiButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(0.0078125, 0.59375, 0.941406, 1)
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("5_bsw8f")
theme_override_styles/normal = SubResource("StyleBoxFlat_hfkrt")
theme_override_styles/hover = SubResource("StyleBoxFlat_hq457")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r7jxa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ugqaj")
icon = ExtResource("6_yggqy")
flat = true

[node name="TieuDe" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
theme_override_font_sizes/font_size = 32
disabled = true
text = "Đổi mật khẩu"
flat = true
alignment = 0

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="LuuButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57
theme = ExtResource("5_bsw8f")
theme_override_font_sizes/font_size = 32
text = "Lưu"
icon = ExtResource("7_nuy3c")
alignment = 0
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
theme = ExtResource("8_7uub3")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/separation = 4

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="Buffer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="TruongThongTin" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="Buffer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="MatKhauCu" type="Button" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
disabled = true
text = "Mật Khẩu Cũ*"
flat = true
alignment = 0

[node name="MatKhauMoi" type="Button" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
disabled = true
text = "Mật Khẩu Mới*"
flat = true
alignment = 0

[node name="NhapLai" type="Button" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
disabled = true
text = "Nhập Lại Mật Khẩu Mới*"
flat = true
alignment = 0

[node name="Buffer2" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ThongTinNguoiDung" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 4
alignment = 1

[node name="Buffer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MatKhauCu" type="LineEdit" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
theme = ExtResource("9_c5r54")
placeholder_text = "Mật Khẩu Cũ"
secret = true

[node name="MatKhauMoi" type="LineEdit" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
theme = ExtResource("9_c5r54")
placeholder_text = "Mật Khẩu Mới"
secret = true

[node name="NhapLai" type="LineEdit" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
theme = ExtResource("9_c5r54")
placeholder_text = "Nhập Lại Mật Khẩu Mới"
secret = true

[node name="Buffer2" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="BufferHienThiButton" type="CheckButton" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme = ExtResource("3_y7q2q")
text = "Hiển thị mật khẩu"

[node name="BufferCaptchaBox" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Captcha" type="Button" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung/BufferCaptchaBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_ed65r")
disabled = true
text = "Captcha"
icon = ExtResource("11_i26px")
flat = true
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung/BufferCaptchaBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DienCaptcha" type="LineEdit" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung/BufferCaptchaBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("9_c5r54")
caret_blink = true

[node name="MauCaptcha" type="LineEdit" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung/BufferCaptchaBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme = ExtResource("9_c5r54")
theme_override_font_sizes/font_size = 24
theme_override_styles/read_only = SubResource("StyleBoxFlat_222ol")
editable = false
caret_blink = true

[node name="Buffer2" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="BufferTop2" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="BufferTop2" type="PanelContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="BufferTop" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01
theme_override_styles/panel = SubResource("StyleBoxFlat_bvb7b")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Thông báo"
initial_position = 1
size = Vector2i(320, 160)
always_on_top = true
popup_window = true
min_size = Vector2i(200, 70)
theme = ExtResource("12_qkx2d")

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/LuuButton" to="." method="_on_luu_button_pressed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/ThongTinNguoiDung/BufferHienThiButton" to="." method="_on_buffer_hien_thi_button_toggled"]
